[package]
name = "tokenizers-cpp"
version = "0.1.0"
authors = ["Alexey Romanov <romanov.alexey1@huawei.com>"]
edition = "2018"

[lib]
name = "tokenizers"
path = "tokenizers-cpp/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cxx = "1.0.27"
derive_more = "0.99.11"
serde = { version = "1.0", features = [ "rc", "derive" ] }
serde_json = "1.0"

[dependencies.tokenizers]
version = "*"
path = "../../tokenizers"

[build-dependencies]
cxx-build = "1.0.27"
cc = "1.0.66"

[features]
test = []
